--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "14.2.7",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "14.2.7",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
